--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,7 +3,7 @@ name: unit-tests
 on:
   pull_request_target:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-        poetry-version: ["1.1.13]
+        poetry-version: ["1.1.13"]
 
     steps:
       - uses: actions/checkout@v3
