--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-root
       - name: Unit tests
-        run: pytest tests
+        run: poetry run pytest tests
