--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,14 +8,13 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-        poetry-version: ["1.1.13"]
 
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          poetry-version: 1.1.13
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
