--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ numpy = "^1.22.0"
 opencv-python = "^4.5.5"
 Sphinx = "^5.0.2"
 sphinx-rtd-theme = "^1.0.0"
+ipykernel = "^6.19.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
