--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
@@ -34,6 +35,7 @@ numpy = "^1.22.0"
 opencv-python = "^4.5.5"
 Sphinx = "^5.0.2"
 sphinx-rtd-theme = "^1.0.0"
+ipykernel = "^6.19.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
