--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ python = "^3.8"
 pandas = "^1.5.2"
 loguru = "^0.6.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+tqdm = "^4.64.1"
 pytest = "^7.2.0"
 black = "^22.3.0"
 docutils = "^0.17.1"
