--- a/.github/workflows/pr-profiling.yml
+++ b/.github/workflows/pr-profiling.yml
@@ -1,8 +1,15 @@
-on: [pull_request]
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   wait-test:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
