--- a/.github/workflows/pr-profiling.yml
+++ b/.github/workflows/pr-profiling.yml
@@ -6,8 +6,8 @@ on:
       - synchronize
       - ready_for_review
     paths:
-      - pystream/**/*
-      - scripts/performance_test/**/*
+      - pystream/**
+      - scripts/performance_test/**
 
 jobs:
   wait-test:
