🚀 add profiling as github action (#21)
* add action yml file

* poetry install dev

* update poetry version

* profiling poetry version

* fix run command

* fix run command add python

* remove no root

* only when ready for review

* write report

* table report

* ideal data

* fix calculation

* change phrases

* only for important files

* ignore report

* fix paths

* test ignore path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ include = [
 python = "^3.8"
 pandas = "^1.5.2"
 loguru = "^0.6.0"
+tabulate = "^0.9.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+tqdm = "^4.64.1"
 pytest = "^7.2.0"
 black = "^22.3.0"
 docutils = "^0.17.1"
