--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ Sphinx = "^5.0.2"
 sphinx-rtd-theme = "^1.0.0"
 ipykernel = "^6.19.4"
 pytest-cov = "^4.0.0"
+nbmake = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
