add notebook test to ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,3 +24,5 @@ jobs:
         run: poetry install --no-root
       - name: Unit tests
         run: poetry run pytest tests
+      - name: Unit tests (notebooks)
+        run: poetry run pytest --nbmake .\demo.ipynb
