--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,18 +32,18 @@ tabulate = "^0.9.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 black = "^22.3.0"
-docutils = "^0.17.1"
+docutils = "<0.19"
 numpy = "^1.22.0"
 opencv-python = "^4.5.5"
 Sphinx = "^5.0.2"
-sphinx-rtd-theme = "^1.2.2"
 ipykernel = "^6.19.4"
 pytest-cov = "^4.0.0"
 nbmake = "^1.4.1"
 esbonio = "^0.16.1"
-rstcheck = {extras = ["sphinx"], version = "^6.1.2"}
 restructuredtext-lint = "^1.4.0"
-doc8 = "<=1.0.0"
+rstcheck = {extras = ["sphinx"], version = "^6.1.2"}
+sphinx-rtd-theme = "^1.2.2"
+doc8 = "<1.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
